Fix overlapping product-form component

--- a/web/src/style/_product-form.scss
+++ b/web/src/style/_product-form.scss
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   padding: 5vh 0;
-  height: 100vh;
   gap: 1.5rem;
 }
 
@@ -13,7 +12,7 @@
   padding: 20px;
   border: 1px solid $light-base-color;
   border-radius: 6px;
-  width: 35vw;
+  width: 45vw;
   gap: 1rem;
 }
 
